[gd_scene load_steps=3 format=3 uid="uid://bp5xcqekyucvs"]

[ext_resource type="Texture2D" uid="uid://lfrtlf01b6wo" path="res://assets/sprites/dark_background.png" id="1_i517y"]
[ext_resource type="Script" path="res://scenes/UI elements/shop_ui.gd" id="1_rwof6"]

[node name="ShopUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwof6")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 320.0
texture = ExtResource("1_i517y")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 481.0
offset_bottom = 54.0
text = "Innkeeper's shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -101.0
offset_right = 144.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.5
offset_top = -31.0
offset_right = 56.5
grow_horizontal = 2
grow_vertical = 0
text = "Back to game"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_right = 66.0
offset_bottom = 54.0
text = "Funds: "
vertical_alignment = 1

[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
